# weather-service-testing

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt
docs/: provider_contracts.md
docs/adr/: 0001-normalized-data-points.md  0002-msc-forecast-sources.md  0003-timezone-comparisons.md
docs/providers/: README.md  accuweather.md  ambient_weather.md  msc_geomet.md  msc_rdps_prognos.md  openweather.md  tomorrow_io.md
scripts/: check_launchd_daemon.sh  diagnose_tomorrow_io_auth.py  fetch_specs.py  inspect_ambient_devices.py  install_launchd_daemon.sh  run_hourly_daemon.sh  uninstall_launchd_daemon.sh
specs/: README.md  msc-geomet.json  msc_geomet.md  openweather.md  tomorrow_io.md
src/wxbench/: __init__.py  config.py  pipeline.py  runtime.py  specs.py
src/wxbench/domain/: __init__.py  (+3 more)
tests/: conftest.py
tests/component/: test_pipeline_components.py  test_storage_components.py
tests/contract/: test_provider_contracts.py
tests/fixtures/: accuweather_minute_forecast.json  ambient_weather_devices.json  msc_geomet_forecast.json  msc_geomet_observation.json  msc_geomet_sample.json  openweather_forecast.json  openweather_observation.json  tomorrow_io_forecast.json  tomorrow_io_observation.json
tests/unit/: test_accuweather_mapping.py  test_ambient_weather_mapping.py  test_config.py  test_datapoints.py  test_geomet_openapi_contains_point_endpoints.py  test_http_retry_policy.py  test_msc_geomet_mapping.py  test_msc_rdps_prognos_mapping.py  test_openweather_mapping.py  test_specs.py  test_sqlite_storage.py  test_tomorrow_io_mapping.py
(+37 files in other folders)
