[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wx-bench"
version = "0.1.0"
description = "Benchmarks weather forecast accuracy for a single configured location."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<0.28",
  "pydantic>=2.6,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "python-dotenv>=1.0",
  "vcrpy>=6.0",
  "respx>=0.20",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
